fix width problems on smaller screens

--- a/style.css
+++ b/style.css
@@ -104,6 +104,11 @@ h1 {
     color: wheat;
 }
 
+iframe {
+    width: 90%;
+    max-width: 640px;
+}
+
 .screenshot-sizing {
     height: 250px;
     width: 250px;
